.opsera-voting-app/k8s/base/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app.kubernetes.io/name: vote
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: vote
